--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section pb-0" id="skills">
+    <div class="untree_co-section pb-0">
         <div class="container">
             <div class="row mb-4">
                 <div class="col-lg-7 text-center mx-auto">
