--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                             <div class="overlay">
                                 <span class="wrap-icon icon-link2"></span>
                             </div>
-                            <img src="images/3d/photo-6.gif" class="lazyload  img-fluid" alt="Images" />
+                            <img src="images/3d/last.png" class="lazyload  img-fluid" alt="Images" />
                         </a>
                     </div>
 
@@ -518,6 +518,19 @@
                     </div>
 
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="untree_co-section pb-0" id="skills">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col-lg-7 text-center mx-auto">
+                    <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Софты которыми я владею</strong></h2>
+                </div>
+            </div>
+            <div class="row">
+                <img class="skills-photo" src="images/skills.PNG" alt="">
             </div>
         </div>
     </div>
