--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-7">
-
-
                     <p class="gsap-reveal-hero">1. Анимация интерфейсов: Создание динамичных и привлекательных анимаций
                         для веб-сайтов, мобильных приложений и десктопных программ, чтобы улучшить
                         пользовательский опыт.</p>
@@ -127,6 +125,16 @@
                         элементов для VR и AR приложений.</p>
                     <p class="gsap-reveal-hero mb-5">8.Синхронизация аудио и видео: Согласование аудио- и видеоэффектов
                         для создания</p>
+                    <p class="gsap-reveal-hero text-center">
+                        <span class="reveal-wrap">
+                            <span class="cover" style="margin-left: 102%;"></span>
+                            <span class="reveal-content" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+                                <a href="CV.pdf" download="CV.pdf" class="btn btn-outline-black">Скачать
+                                    резюме
+                                </a>
+                            </span>
+                        </span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -459,7 +467,7 @@
                             <div class="overlay">
                                 <span class="wrap-icon icon-link2"></span>
                             </div>
-                            <img src="images/3d/last.png" class="lazyload  img-fluid" alt="Images" />
+                            <img src="images/3d/lasssst.WEBP" class="lazyload  img-fluid" alt="Images" />
                         </a>
                     </div>
 
